# marching_cubes

./: Cargo.toml  README.md
assets/shaders/: chunk_material.wgsl  marchig_cubes.wgsl  marching_cubes_table.wgsl  noise.wgsl
src/: main.rs
src/materials/: chunk_material.rs
src/noise/: mod.rs  opensimplex.rs
src/world/: chunk.rs  marching_cubes_tables.rs  mod.rs
