[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic = ["bevy/dynamic"]

[dependencies]
bevy = "0.6.1"
bevy_fly_camera = "0.8.0"
rand = "0.8.5"
opensimplex_noise_rs = "0.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3