[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic = ["bevy/dynamic"]

[dependencies]
bevy = "0.7.0"
bevy_fly_camera = {git = "https://github.com/PikminGuts92/bevy_fly_camera/", branch = "bevy-0.7"}
rand = "0.8.5"
opensimplex_noise_rs = "0.3.0"
bytemuck = "1.8.0"
futures-lite = "1.11.3"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3